--- a/index.html
+++ b/index.html
@@ -6,21 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <title>JSON Placeholder</title>
+    <title>Phone hunter</title>
 </head>
 
 <body>
+    <header class="w-full mb-5 p-5 bg-gray-900">
+        <h1 class="text-center font-bold text-4xl text-white">Your Phone Hunter</h1>
+        <div class="w-9/12 m-auto">
+            <input id="input_bar" placeholder="Search Phone" class="w-full rounded-full pl-5 p-2 mt-5" type="text">
+            <div class="w-3/5 m-auto mt-5" onclick="activeSearch()">
+                <button
+                    class=" w-full bg-rose-400 hover:font-bold hover:bg-rose-300  rounded-full px-5 py-2">Search</button>
+            </div>
+        </div>
+    </header>
+    <section>
+        <div id="loading" class=" hidden  flex items-center justify-center">
+            <img class="" src="loading.gif" alt="" srcset="">
+        </div>
+        <div id="noPhoneFound" class="bg-slate-50 m-auto w-1/3 p-5">
+            <img src="https://cdn.dribbble.com/users/665029/screenshots/16162764/plane_2.gif" alt="">
+            <h1 class=" text-center font-bold text-2xl">No phone found </h1>
+        </div>
+        <div id="Phone-containter"
+            class=" w-9/12 bg-gray-200 rounded m-auto grid-cols-1 grid md:grid-cols-2 lg:grid-cols-3 gap-1 p-2">
+        </div>
+    </section>
 
 
-    <nav class="sticky top-0 w-full bg-gray-200 text-center font-bold text-5xl p-5">
-        My workers
-    </nav>
-    <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 p-5" id="append_div">
-    </div>
-    </div>
 
-    <script src="js/fech.js"></script>
+
+    <script src="https://openapi.programming-hero.com/api/phones?search=iphone"></script>
+    <script src="js/phonehunter.js"></script>
 </body>
 
 </html>
