see more button added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
             <h1 class=" text-center font-bold text-2xl">No phone found </h1>
         </div>
         <div id="Phone-containter"
-            class=" w-9/12 bg-gray-200 rounded m-auto grid-cols-1 grid md:grid-cols-2 lg:grid-cols-3 gap-1 p-2">
+            class=" w-10/12 p-2 bg-gray-200 rounded m-auto mb-5 grid-cols-1 grid md:grid-cols-2 lg:grid-cols-3 gap-1 p-2 pb-5">
+        </div>
+        <!-- see all -->
+        <div onclick="SeeAll()" id="see_all"
+            class="hidden w-10/12 m-auto bg-gray-200 mt-5 mb-5 select-none cursor-pointer">
+            <p class="m-auto underline underline-offset-2 text-lime-900 font-bold text-center">See
+                all</p>
         </div>
     </section>
 
